// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extensions [production] bud.extensions.repository matches snapshot 1`] = `
Object {
  "@roots/bud-babel": Controller {
    "_app": [Function],
    "_module": Object {
      "mixin": [Function],
      "name": "@roots/bud-babel",
      "options": undefined,
      "register": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "@roots/bud-entrypoints": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "@roots/bud-entrypoints",
      "options": undefined,
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "@roots/bud-postcss": Controller {
    "_app": [Function],
    "_module": Object {
      "mixin": [Function],
      "name": "@roots/bud-postcss",
      "options": undefined,
      "register": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "@roots/bud-preset-recommend": Controller {
    "_app": [Function],
    "_module": Object {
      "name": "@roots/bud-preset-recommend",
      "options": undefined,
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "@roots/bud-tailwindcss": Controller {
    "_app": [Function],
    "_module": Object {
      "api": Object {
        "tailwind": [Function],
      },
      "boot": [Function],
      "name": "@roots/bud-tailwindcss",
      "options": undefined,
    },
    "log": [Function],
    "meta": Object {
      "booted": true,
      "instance": "bud",
      "registered": true,
    },
  },
  "clean-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "clean-webpack-plugin",
      "options": Object {
        "cleanOnceBeforeBuildPatterns": Array [
          "**/*",
          "!dll",
        ],
        "cleanStaleWebpackAssets": true,
        "protectWebpackAssets": true,
      },
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "copy-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "copy-webpack-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "eslint-webpack-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "mixin": [Function],
      "name": "eslint-webpack-plugin",
      "options": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": false,
    },
  },
  "mini-css-extract-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "mini-css-extract-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-define-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-define-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-hot-module-replacement-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-hot-module-replacement-plugin",
      "options": undefined,
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-manifest-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-manifest-plugin",
      "options": [Function],
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
  "webpack-provide-plugin": Controller {
    "_app": [Function],
    "_module": Object {
      "make": [Function],
      "name": "webpack-provide-plugin",
      "options": undefined,
      "when": [Function],
    },
    "log": [Function],
    "meta": Object {
      "booted": false,
      "instance": "bud",
      "registered": true,
    },
  },
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 2`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 3`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 4`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 5`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 6`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 7`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 8`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 9`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": false,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 10`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 11`] = `
Object {
  "booted": true,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 12`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 13`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;

exports[`Extensions [production] bud.extensions.repository matches snapshot 14`] = `
Object {
  "booted": false,
  "instance": "bud",
  "registered": true,
}
`;
